--- a/scss/notes.scss
+++ b/scss/notes.scss
@@ -9,7 +9,6 @@
   height: $note-size;
   margin: 10px;
   margin-top: 0;
-  background-color: red;
 
   &:not(:first-of-type) {
     margin-left: 20px;
@@ -24,6 +23,7 @@
     font-family: inherit;
     background-color: #cbcb43;
     resize: none;
+    z-index: 10;
 
     &:focus-visible {
       outline: 2px solid white;
